# ScalarLM

./: .dockerignore  .env.amd64  .env.arm64  .env.example  .env.gpu  .env.local-vllm  .gitignore  404.html  CNAME  Dockerfile  Dockerfile.TW  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.rocm_base  Faq.md  README.md  cray  docker-compose.yaml  index.html  pyproject.toml  requirements.txt  run_tests.sh  scalarlm  setup.py
.github/workflows/: depot-amd.yml  depot-cpu.yml  depot-nvidia-8.0.yml  depot-nvidia-8.6.yml  depot-nvidia.yml  depot.yml  unit-tests.yml
arch/: index.html
cli/cli/: index.html
cli/list-models/: index.html
cli/plot/: index.html
cli/squeue/: index.html
cli/training-logs/: index.html
cmd/: bashly-settings.yml  bashly.sh  bashly.yml  benchmark_command.sh  build_image_command.sh  deploy_command.sh  depot_build_command.sh  diffusion_command.sh  llm_logs_command.sh  llm_ls_command.sh  llm_plot_command.sh  llm_squeue_command.sh  pypi_command.sh  serve_command.sh  test_command.sh  up_command.sh
contact/: index.html
cray-docs/docs/: index.html
cray-docs/docs/arch/: index.html
cray-docs/docs/contact/: index.html
cray-docs/docs/inference/: index.html
cray-docs/docs/quickstart/: index.html
cray-docs/docs/training/: index.html
deployment/ansible/: hosts  k8.yaml  rancher_k8.yml
deployment/docker/: index.html
deployment/hasicorp/: vault_test.py
deployment/helm/cray/: Chart.yaml  values.yaml
deployment/kubernetes/: index.html
deployment/laptop/: index.html
deployment/modal/: index.html
deployment/modal-details/: index.html
docs/: DEPLOYMENT.md  api-documentation.md  architecture-overview.md  deploy.sh  generate-docs.sh  index.html
docs/cli/cli/: index.html
docs/cli/list-models/: index.html
docs/cray-docs/: mkdocs.yml
docs/cray-docs/docs/: arch.md  contact.md  index.md  inference.md  quickstart.md  training.md
docs/deployment/docker/: index.html
docs/deployment/laptop/: index.html
docs/deployment/modal/: index.html
docs/deployment/modal-details/: index.html
docs/html/: api-documentation.html  architecture-overview.html  slurm_guide.html
docs/quickstart/: index.html
docs/training/: index.html
inference/: index.html
infra/: CMakeLists.txt  requirements-common.txt  requirements-cuda.txt  requirements-megatron.txt  requirements-vllm-build.txt  requirements-vllm-cpu.txt  requirements-vllm.txt  setup.py
infra/cmake/: cpu_extension.cmake
infra/cray_infra/adapters/: __init__.py
infra/cray_infra/generate/: clear_acked_requests_from_queue.py  metrics.py
infra/cray_infra/huggingface/: get_hf_token.py
infra/cray_infra/one_server/: create_api.py  create_generate_worker.py  create_megatron.py  create_vllm.py  main.py  start_cray_server.py  wait_for_vllm.py
infra/cray_infra/training/: cancel.py  get_gpu_count.py  get_latest_model.py  get_node_count.py  get_training_job_info.py  launch_training_job.py  list_models.py  metrics.py  print_logo.py  register_megatron_models.py  register_megatron_workers.py  restart_megatron_jobs.py  squeue.py  training_harness.py  training_job_context.py  training_job_status.py  training_logs_generator.py  upload_training_data.py  vllm_model_manager.py
infra/cray_infra/util/: default_config.py  default_job_config.py  get_config.py  get_job_config.py
infra/cray_infra/vllm/: __init__.py  _custom_ops.py  _version.py  config.py  direct_engine.py  engine_factory.py  engine_interface.py  http_engine.py  outputs.py  shared_engine.py  utils.py
infra/csrc/cutlass_extensions/: vllm_cutlass_library_extension.py
infra/slurm_configs/: cgroup.conf  munge.key  slurm.conf  slurm.key
infra/slurm_src/: cgroup_docker.c  compile.sh
infra/util/: plot_training.py
ml/cray_megatron/: main.py
ml/cray_megatron/collectives/: data_parallelism.py  main_rank_only.py
ml/cray_megatron/huggingface/: download_model.py
ml/cray_megatron/megatron/: megatron_trainer.py  training_loop.py
ml/cray_megatron/models/: does_any_checkpoint_exist.py  get_latest_checkpoint_path.py  get_model_manager.py  model_manager_base.py
ml/diffusion_forcing/: eval.py  train.py
ml/tokenformer/: llama_tokenformer_attention.py  llama_tokenformer_decoder_layer.py  llama_tokenformer_layers.py  llama_tokenformer_model.py  tokenformer_adapter_manager.py  tokenformer_model.py  tokenformer_model_manager.py  tokenformer_surgeon.py  transformers_tokenformer.py
nsvm/: Cargo.toml  README.md
nsvm/tests/: integration_tests.rs
quickstart/: index.html
scripts/: build-copy-vllm.sh  cray  run-deployment-tests.sh  run-integration-tests.sh  run-pytests.sh  scalarlm  start_one_server.sh  start_slurm.sh  train_job_entrypoint.sh
sdk/: pyproject.toml  test.py
sdk/cli/: main.py  plot.py  squeue.py  view_logs.py
sdk/masint/: __init__.py
sdk/masint/api/: async_supermassive_intelligence.py  supermassive_intelligence.py
sdk/masint/cli/: cancel.py  clear_queue.py  ls.py  main.py  plot.py  stats.py  view_logs.py
sdk/masint/engines/: async_cray.py
sdk/masint/engines/cray/: poll_for_downloads.py  submit_slurm_job.py  submit_training_job.py  upload_generate.py
sdk/masint/util/: get_api_base.py  make_api_url.py
sdk/scalarlm/: __init__.py
sdk/supermi/api/: supermi.py
search/: search_index.json
test/: requirements-pytest.txt
test/benchmark/: main.py
test/benchmark/pytorch/: backward.py  forward.py  gemm.py  memcpy.py  memcpy_peer.py  mpi_p2p.py
test/benchmark/roofline/: plot_bandwidth_sweep.py  plot_roofline.py
test/collectives/: benchmark-send-recv.py  test-all-gather.py  test-all-reduce.py  test-all-to-all.py  test-hello.py  test-reduce-scatter.py  test-send-recv.py
test/deployment/: embed.py  generate.py  generate_with_input_image.py  health.py  slurm_utils.py  train.py  train_generate.py
test/infra/: generate.py  get_latest_model.py  get_results.py  health.py  openai_client.py  sanity.py  slurm.py  upload_dataset.py  vllm_health.py
test/integration/: test_kv_cache.py  test_pipeline.py
test/ml/rl/: mini-bird.json  (+2 more)
test/performance/: compare_vllm_modes.py
test/scripts/: run_tests.sh
training/: index.html
(+250 files in other folders)
