[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masint"
version = "0.0.1"
authors = [
  { name="Greg Diamos", email="gregory.diamos@gmail.com" },
]
description = "Supermassive Intellgence"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
]

[tool.setuptools]
packages = [
    "masint",
    "masint.api",
]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 2

