[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scalarlm"
version = "0.5.7"
authors = [
  { name="Greg Diamos", email="gregory.diamos@gmail.com" },
]
description = "ScalarLM is a unified LLM inference and training platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "aiofiles",
    "jsonlines",
    "matplotlib",
]

[tool.setuptools]
packages = [
    "masint",
    "masint.api",
    "masint.cli",
    "masint.util",
    "masint.engines",
    "masint.engines.cray",
]

[project.scripts]
scalarlm = "masint.cli.main:main"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 2

[project.urls]
Homepage = "https://github.com/tensorwavecloud/scalarlm"

